# oxigrad

./: .gitignore  Cargo.toml  LICENSE  README.md  README.pypi.md  pyproject.toml  sex.py
example/: simple_neuron.py
examples/: cross_entropy.py  linear_regression.py  simple_neuron.py
oxigrad-core/: Cargo.toml
oxigrad-core/src/: dtype.rs  lib.rs  operation.rs
src/: internal.rs  lib.rs  main.rs  operation.rs
src/activation/: mod.rs
src/loss/: mod.rs
src/loss/cross_entropy/: mod.rs  test.rs
src/loss/mse/: mod.rs  test.rs
src/micrograd_rs/: _core.pyd
src/oxigrad/: __init__.py  _core.pyi
src/value/: internal.rs  mod.rs  operation.rs  test.rs
